--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>doom</title>
+    <title>搬数据的小红帽</title>
   </head>
   <body>
     <app></app>
